# AsmrHelper

./: .gitignore  README.md  REFACTOR_PLAN.md  add_imports.py  analyze_gui.py  analyze_workers.py  cleanup_app.py  docs  extract_batch_script.py  extract_batch_tmp.py  extract_preview.py  extract_single.py  extract_tools.py  extract_workshop.py  fix_app.py  fix_imports.py  fix_preview_call.py  fix_script.py  fix_single.py  fix_tab_call.py  fix_tools_tab.py  fix_worker.py  fix_worker2.py  fix_workshop.py  format_preview.py  format_wrap.py  move_file_row.py  preview_tmp.py  pyproject.toml  run.bat  search_workshop.py  setup.ps1  transform_batch.py  update_app.py  音色描述词指南.md
.learnings/: LEARNINGS.md
.workbuddy/: expert-history.json
ASMR_O/: #2.千寻的治愈的放松手交.wav.vtt
Report/: code_review_report.md  report_1.txt  report_10_gui_layout_review.md  report_11_robustness_decoupling.md  report_12_refactor_review.md  report_13_translation_migration.md  report_14_asr_migration.md  report_15_translation_asr_review.md  report_16_output_structure_analysis.md  report_2_agent3_architecture.md  report_3_vtt_smart_pipeline.md  report_4_agent1_implementation_review.md  report_4_timestamp_alignment.md  report_5_tts_alignment_review.md  report_5_voice_system.md  report_6_agent1_voice_system_review.md  report_6_cuda_flash_attn_migration.md  report_7_agent1_debug_review.md  report_8_environment_review.md  report_9_gui_bug_fix.md
config/: asmr_terms.json  config.json  voice_profiles.example.json  voice_profiles.json
scripts/: asmr_bilingual.py  batch_process.py  generate_voice_profiles.py  gui.py  install_models.py  verify_env.py  verify_models.py
src/: __init__.py  cli.py  config.py  exceptions.py  gui.py  gui_services.py  gui_workers.py  services.py
tests/: conftest.py  test_asr_enhanced.py  test_asr_postprocess.py  test_checkpoint.py  test_core.py  test_cuda_fullflow.py  test_fixes.py  test_gui_runtime_refs.py  test_qwen3_minimal.py  test_qwen3_only.py  test_report21_time_domain_fix.py  test_setup_integration.py  (+3 more)
(+70 files in other folders)
